--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-responsive": "^10.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1"
   }
 }
